Tag changes to the API
