# api/models/group_policy.js
@@ -86,7 +86,7 @@ function getAssociatedParkingGroupsRequestHandle() {
             "instanceid": "75b3e303-ec4f-4643-b483-f98d975a5d24",
             "requestid": "291ef868-2bd0-4350-ac87-3591039bb397",
             "timestamp": "2017-07-12T02:33:25.504Z",
-            "type": "associatedparkinggroups",
+            "type": "associatedParkingGroups",
             "model": "getSensorHistoryFromTo",
             "action": "CAN_READ",
             "user": "0be386cc-2cca-4a1c-9a07-0e5a9bc2306c",
