# api/models/policy_tag.js
@@ -20,7 +20,7 @@ function getRequestHandle() {
             "instanceid": "75b3e303-ec4f-4643-b483-f98d975a5d24",
             "requestid": "291ef868-2bd0-4350-ac87-3591039bb397",
             "timestamp": "2017-07-12T02:33:19.491Z",
-            "type": "getTag",
+            "type": "getPolicyCategory",
             "model": "getSensorHistoryFromTo",
             "action": "CAN_READ",
             "user": "0be386cc-2cca-4a1c-9a07-0e5a9bc2306c",
@@ -51,7 +51,7 @@ function postRequestHandle() {
             "instanceid": "75b3e303-ec4f-4643-b483-f98d975a5d24",
             "requestid": "291ef868-2bd0-4350-ac87-3591039bb397",
             "timestamp": "2017-07-12T02:33:17.052Z",
-            "type": "postTag",
+            "type": "createPolicyCategory",
             "model": "getSensorHistoryFromTo",
             "action": "CAN_READ",
             "user": "0be386cc-2cca-4a1c-9a07-0e5a9bc2306c",
@@ -87,7 +87,7 @@ function getAllRequestHandle() {
             "instanceid": "75b3e303-ec4f-4643-b483-f98d975a5d24",
             "requestid": "291ef868-2bd0-4350-ac87-3591039bb397",
             "timestamp": "2017-07-12T02:33:21.496Z",
-            "type": "getAllTags",
+            "type": "getAllPolicyCategory",
             "model": "getSensorHistoryFromTo",
             "action": "CAN_READ",
             "user": "0be386cc-2cca-4a1c-9a07-0e5a9bc2306c",
@@ -111,7 +111,7 @@ function deleteRequestHandle() {
             "instanceid": "75b3e303-ec4f-4643-b483-f98d975a5d24",
             "requestid": "291ef868-2bd0-4350-ac87-3591039bb397",
             "timestamp": "2017-07-12T02:33:25.504Z",
-            "type": "deleteTag",
+            "type": "deletePolicyCategory",
             "model": "getSensorHistoryFromTo",
             "action": "CAN_READ",
             "user": "0be386cc-2cca-4a1c-9a07-0e5a9bc2306c",
@@ -137,7 +137,7 @@ function updateRequestHandle() {
             "instanceid": "75b3e303-ec4f-4643-b483-f98d975a5d24",
             "requestid": "291ef868-2bd0-4350-ac87-3591039bb397",
             "timestamp": "2017-07-12T02:33:23.500Z",
-            "type": "updateTag",
+            "type": "updatePolicyCategory",
             "model": "getSensorHistoryFromTo",
             "action": "CAN_READ",
             "user": "0be386cc-2cca-4a1c-9a07-0e5a9bc2306c",
